--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,11 @@ android {
             force 'com.android.support:support-annotations:24.2.0'
         }
     }
+
+    kapt {
+        generateStubs = true
+    }
+
 }
 
 dependencies {
